fixted text overflow

--- a/src/components/todoList-Item/todoList-item.scss
+++ b/src/components/todoList-Item/todoList-item.scss
@@ -2,4 +2,10 @@
     display: flex;
     justify-content: space-between;
     padding: 0 10px;
+
+    .text {
+        border: 1px solid red;
+        width: 60%;
+        word-wrap: break-word;
+    }
 }
